Add Blazor begineer tutorial 4 codes.

--- a/src/FirstBlazorApp/Pages/Counter.razor
+++ b/src/FirstBlazorApp/Pages/Counter.razor
@@ -1,4 +1,7 @@
 ﻿@page "/counter"
+@page "/counter/{startingValue:int}"
+@page "/dothestuff"
+@layout MainLayout
 
 <PageTitle>Counter</PageTitle>
 
@@ -12,10 +15,21 @@
     private int currentCount = 0;
 
     [Parameter]
+    public int startingValue { get; set; } = 0;
+
+    [Parameter]
     public int IncrementBy { get; set; } = 1;
 
+        protected override void OnParametersSet()
+        {
+            currentCount = startingValue;
+            base.OnParametersSet();
+        }
+    
     private void IncrementCount()
     {
         currentCount+=IncrementBy;
     }
 }
+
+
